@@ -33,16 +33,13 @@ BEGIN
   unshift @INC, $perllibdir;
 }
 
+use Automake::Config;
 use Automake::General;
 use Automake::Configure_ac;
 use Automake::XFile;
 use Automake::FileUtils;
 use File::stat;
 
-# Some constants.
-$VERSION = '@VERSION@';
-$APIVERSION = '@APIVERSION@';
-$PACKAGE = '@PACKAGE@';
 # Note that this isn't pkgdatadir, but a separate directory.
 # Note also that the versioned directory is handled later.
 $acdir = '@datadir@/aclocal';
