@@ -121,6 +121,7 @@ sub target_hook ($$$$)
 package Automake;
 
 use strict;
+use Automake::Config;
 use Automake::General;
 use Automake::XFile;
 use Automake::Channels;
@@ -141,12 +142,6 @@ use Carp;
 ## ----------- ##
 ## Constants.  ##
 ## ----------- ##
-
-# Parameters set by configure.  Not to be changed.  NOTE: assign
-# VERSION as string so that e.g. version 0.30 will print correctly.
-my $VERSION = '@VERSION@';
-my $PACKAGE = '@PACKAGE@';
-my $libdir = '@datadir@/@PACKAGE@-@APIVERSION@';
 
 # Some regular expressions.  One reason to put them here is that it
 # makes indentation work better in Emacs.
