@@ -1,3 +1,13 @@
+2003-08-06  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* lib/Automake/Config.in: New file.
+	* lib/Automake/Makefile.am (nodist_perllib_DATA, do_subst,
+	CLEANFILES): New variables.
+	(Config.pm): New rule.
+	* Makefile.am (maintainer-check): Adjust expected differences
+	between automake.in and automake.
+	* aclocal.in, automake.in: Use Automake::Config.
+
 2003-08-05  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* tests/ltconv.test: s/rm/rm -f/ to placate maintainer-check.
